--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Pages.Page"/>
         <activity android:name=".Pages.LoginPage" />
         <activity android:name=".Pages.CreateAccountPage" />
         <activity android:name=".Pages.ResetPasswordPage" />
