--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.libsysmobile">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -18,10 +20,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Pages.Page"/>
-        <activity android:name=".Pages.LoginPage" />
-        <activity android:name=".Pages.CreateAccountPage" />
-        <activity android:name=".Pages.ResetPasswordPage" />
+        <activity android:name=".login_pages.LoginPage" />
+        <activity android:name=".login_pages.CreateAccountPage" />
+        <activity android:name=".login_pages.ResetPasswordPage" />
     </application>
 
 </manifest>
