--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -14,16 +15,14 @@
         <activity
             android:name=".MainActivity">
         </activity>
-        <activity android:name=".Pages.SearchMember"/>
-        <activity android:name=".login_pages.LoginPage" />
-        <activity android:name=".login_pages.Login"/>
-        <activity android:name=".login_pages.CreateAccountPage" />
-        <activity android:name=".login_pages.ResetPasswordPage" />
+        <activity android:name=".pages.LoginPage" />
+        <activity android:name=".pages.CreateAccountPage" />
+        <activity android:name=".pages.ResetPasswordPage" />
         <activity android:name=".user_home_pages.LibrarianHomePage"/>
         <activity android:name=".user_home_pages.AdminHomePage"/>
         <activity android:name=".user_home_pages.MemberHomePage"/>
         <activity
-            android:name=".login_pages.SplashPage"
+            android:name=".pages.SplashPage"
             android:theme="@style/Theme.AppCompat.NoActionBar"
             >
             <intent-filter>
