--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,12 +15,15 @@
         <activity
             android:name=".MainActivity">
         </activity>
+
         <activity android:name=".pages.LoginPage" />
         <activity android:name=".pages.CreateAccountPage" />
         <activity android:name=".pages.ResetPasswordPage" />
         <activity android:name=".user_home_pages.LibrarianHomePage"/>
         <activity android:name=".user_home_pages.AdminHomePage"/>
         <activity android:name=".user_home_pages.MemberHomePage"/>
+        <activity android:name=".pages.SearchBookPage" />
+        <activity android:name=".pages.UnlockUserPage" />
         <activity
             android:name=".pages.SplashPage"
             android:theme="@style/Theme.AppCompat.NoActionBar"
